リニューアルにつき

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /*-----------------------------------------------------------
-Theme Name: LABwel
+Theme Name: LABwel（旧）
 Auther: 株式会社スタンドトゥギャザー
 Description: LABwelのサイトに使用されるWordPressテーマです
 Version: 1.0
